# Marvelsoft

./: CMakeLists.txt  README.txt  Screencast_02-26-2022_09:53:25 AM.webm  a.out  first.json  funkcija za vracanje vrijednosti.cpp  help.json  main.cpp  mainLogicFunction.cpp  pomocni.json  proba.cpp
include/: allNotesWithOneSymbol.hpp  klase.hpp  mainLogicFunction.hpp  outputJsonFile.hpp  parsingJSON.hpp  returnAllSymbols.hpp
src/: CMakeLists.txt  allNotesWithOneSymbol.cpp  mainLogicFunction.cpp  outputFiles.cpp  parsingJSON.cpp  parsingJsonFunction.cpp  recordsWithSameSymbol.cpp  returnAllSymbols.cpp
